# alluvia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
alluvia/: cli.py  config.py  demo_corpus.py  demo_embeddings.json  doctor.py  inspect.py  lockfile.py  mcp_server.py  models.py  platform.py  progress.py  recall.py  resources.py  web.py
alluvia/distill/: distiller.py  scrub.py
alluvia/engine/: cluster.py  digest.py  embed.py  engine.py  label.py  link.py  (+2 more)
assets/: alluvia-tokens.css
docs/: BRAND.md  DEBT.md  SOURCES.md
scripts/: probe_forks.py
tests/: conftest.py  test_backtest_gate_finds.py  test_chatgpt_export.py  test_cli_connections.py  test_cli_degraded.py  test_cli_digest.py  test_cli_m0.py  test_cli_m1.py  test_cli_m2b.py  test_cli_m2c.py  test_cli_unfinished.py  test_concurrency.py  test_config_toml.py  test_demo.py  test_dev_kernels.py  test_digest_engine.py  test_digest_store.py  test_distill_checkpoint.py  test_distill_scrub.py  test_distiller.py  test_doctor.py  test_engine_cluster.py  test_engine_degraded.py  test_engine_embed.py  test_engine_label.py  test_engine_link.py  test_engine_progress.py  test_engine_refresh.py  test_engine_refresh_m2a.py  test_engine_track.py  test_entrypoint_wiring.py  test_first_run.py  test_ingest_claude_code.py  test_ingest_jsonl.py  test_init.py  test_label_cache.py  test_link_m2b.py  test_live_hardening.py  test_llm_chain.py  test_llm_fake.py  (+35 more)
(+14 files in other folders)
