[project]
name = "alluvia"
version = "0.2.0"
description = "Mine your AI conversations — every tool, every month — for the ideas you forgot you had. Local-first."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Dylan Parent"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "anthropic>=0.40",
  "openai>=1.40",
  "fastembed>=0.4",
  "hdbscan>=0.8.40",
  "numpy>=2.0",
  "sqlite-vec>=0.1.6",
  "mcp>=1.2",
]

[project.scripts]
alluvia = "alluvia.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alluvia"]

[tool.pytest.ini_options]
addopts = "-q"
